# CProjects

./: .gitignore  README.md
01-logger/: CMakeLists.txt  README.md  main.c
01-logger/inc/: formatter.h  logging.h
01-logger/src/: CMakeLists.txt  logging.c
01-logger/tests/: CMakeLists.txt
02-DataStructures/01-LinkedLists/: README.md  linkedlists.c  linkedlists.h
02-DataStructures/BinaryTree/: README.md  bt.c  bt.h  main.c  stack.h
02-DataStructures/Stack/: stack.c  stack.h
03-Algorithms/Qrsqrt/: README.md  rsqrt.c
MPI/00-Jacobi/: 1d_serial.c  2d_serial.c
